--- a/data/templates/default/main.html
+++ b/data/templates/default/main.html
@@ -6,3 +6,6 @@
     id libero at malesuada. Fusce dapibus tortor nisi, quis pulvinar purus sollicitudin vitae. Sed id est ex. Phasellus
     mollis, purus eu aliquam ultricies, massa ex aliquet justo, eu convallis purus odio eget dui. Phasellus quis
     dignissim ipsum, non tempor dui. Donec a velit lacinia, blandit felis sit amet, posuere sem.</p>
+
+<h2>Second {{ loud "section" }}</h2>
+<p></p>
