--- a/data/templates/default/main.html
+++ b/data/templates/default/main.html
@@ -7,5 +7,5 @@
     mollis, purus eu aliquam ultricies, massa ex aliquet justo, eu convallis purus odio eget dui. Phasellus quis
     dignissim ipsum, non tempor dui. Donec a velit lacinia, blandit felis sit amet, posuere sem.</p>
 
-<h2>Second {{ loud "section" }}</h2>
-<p></p>
+<h2>Second section</h2>
+<p>{{ include "test.html" }}</p>
