--- a/data/templates/default/main.html
+++ b/data/templates/default/main.html
@@ -8,4 +8,4 @@
     dignissim ipsum, non tempor dui. Donec a velit lacinia, blandit felis sit amet, posuere sem.</p>
 
 <h2>Second section</h2>
-<p>{{ include "test.html" }}</p>
+{{ include "test.html" }}
