--- a/data/templates/default/main.html
+++ b/data/templates/default/main.html
@@ -1,11 +1,4 @@
-<!--metadata
-
--->
-<h1>Default template</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam fermentum nunc ac bibendum varius. Praesent congue
-    id libero at malesuada. Fusce dapibus tortor nisi, quis pulvinar purus sollicitudin vitae. Sed id est ex. Phasellus
-    mollis, purus eu aliquam ultricies, massa ex aliquet justo, eu convallis purus odio eget dui. Phasellus quis
-    dignissim ipsum, non tempor dui. Donec a velit lacinia, blandit felis sit amet, posuere sem.</p>
-
-<h2>Second section</h2>
-{{ include "test.html" }}
+{{ include "toolbar/header.html" }}
+{{ include "toolbar/navigation.html" }}
+{{ include "view/document.html" }}
+{{ include "toolbar/footer.html" }}
