--- a/data/templates/default/main.html
+++ b/data/templates/default/main.html
@@ -1,3 +1,5 @@
+{{ include_style "css/main.css" }}
+
 {{ include "toolbar/header.html" }}
 {{ include "toolbar/navigation.html" }}
 {{ include "view/document.html" }}
