fix: manage html files

--- a/data/template/default/main.html
+++ b/data/template/default/main.html
@@ -1,6 +1,6 @@
 {{ include_style "css/main.css" }}
 
-{{ include "toolbar/header.html" }}
-{{ include "toolbar/navigation.html" }}
+{{ include "header.html" }}
+{{ include "navigation.html" }}
 {{ include "view/document.html" }}
 {{ include "toolbar/footer.html" }}
