--- a/data/template/default/main.html
+++ b/data/template/default/main.html
@@ -3,4 +3,4 @@
 {{ include "header.html" }}
 {{ include "navigation.html" }}
 {{ include "view/document.html" }}
-{{ include "toolbar/footer.html" }}
+{{ include "footer.html" }}
