fix: json return

--- a/data/template/default/footer.html
+++ b/data/template/default/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <img src="img/logo.png" alt=""/> © 2024 <a href="https://github.com/qooando/qwiki" target="_blank">qwiki</a>
+    <img src="/api/wiki/template/default/img/logo.png" alt=""/> © 2024 <a href="https://github.com/qooando/qwiki" target="_blank">qwiki</a>
 </footer>
