fix: restart INotifyWait if watched folder is deleted and recreated

--- a/data/template/default/view/document.html
+++ b/data/template/default/view/document.html
@@ -1,9 +1,6 @@
 <article>
-{{ include "view/breadcrumb.html" }}
-{{ include documentPath }}
-
+    {{ include "view/breadcrumb.html" }}
     <section>
-        <h1>Title</h1>
-        <p>Zephyro nullo flexi extendi onerosior ultima semina exemit tuti aestu cesserunt minantia foret habitabilis moderantum proximus diu deorum erat duas nabataeaque mare ita melior bracchia poena solidumque praecipites ardentior, magni diu fabricator induit retinebat aliud haec caelo fossae homo praeter inposuit subsidere nunc ignotas nubes ne adspirate posset: tanto locis supplex militis tempora non perpetuum pro amphitrite viseret tuti ipsa pendebat foret exemit ora melioris circumfluus altae praecipites igni mutatas innabilis temperiemque spectent tellure alto horrifer caecoque dissaepserat imagine moles satus pinus animalibus formas habitabilis seductaque videre peragebant undae utramque diverso illas diremit sidera sua formaeque volucres finxit rectumque tenent lacusque mundo occiduo animal pluvialibus subsidere triones nec postquam fulminibus nullaque terram quoque cornua galeae septemque mixtam conversa porrexerat metusque homini quae emicuit otia caeleste habendum phoebe sinistra occiduo forma feras levitate induit caecoque invasit undis austro concordi poena nam supplex terrae frigore vix mundi recepta solum calidis moderantum margine.</p>
+        {{ include window.location.bookmark }}
     </section>
 </article>
