--- a/data/template/default/css/main.scss
+++ b/data/template/default/css/main.scss
@@ -1,6 +1,35 @@
+@import "helper/colors";
+@import "helper/layout";
+
+// debug
+* {
+  border: 1px solid blue;
+  margin: 1px;
+}
+
 body {
-  background: red;
+  @include color-box;
   margin: 0;
   border: 0;
+}
+
+footer {
+  @include color-alt;
+  width: 100%;
   padding: 1rem;
+}
+
+
+#workspace {
+
+  #document {
+    @include flex-item(3);
+    width: 0;
+  }
+
+  aside {
+    @include flex-item(1);
+    width: 0;
+  }
+  
 }
