--- a/qlient_data/template/default/widgets/breadcrumb.html
+++ b/qlient_data/template/default/widgets/breadcrumb.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
     {{#each ( split window.location.bookmark "/" ) as |crumb| }}
-    <li>{{ crumb }}</li>
+    <li><a href="FIXME_WITH_FULL_PATH/#{{ crumb }}">{{ crumb }}</a></li>
     {{/each}}
 </ol>
