--- a/qlient_data/template/default/widgets/docs-list.html
+++ b/qlient_data/template/default/widgets/docs-list.html
@@ -1,5 +1,7 @@
-<ol>
-    {{#each (documents)}}
-    <li><a href="#{{this.contentPath}}">{{@key}}: {{this.contentPath}}</a></li>
-    {{/each}}
-</ol>
+<h4>Documents</h4>
+{{ documents }}
+<!--<ol>-->
+<!--&lt;!&ndash;    {{#each (documents)}}&ndash;&gt;-->
+<!--&lt;!&ndash;    <li><a href="#{{this.contentPath}}">{{@key}}: {{this.contentPath}}</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;    {{/each}}&ndash;&gt;-->
+<!--</ol>-->
